credits + primary sources

--- a/section-2.html
+++ b/section-2.html
@@ -1,80 +1,135 @@
-<!DOCTYPE HTML>
+<!doctype html>
 <!--
 	Escape Velocity by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
-<html lang=en>
+<html lang="en">
 	<head>
-		<title>Economic-Social Networks - Pre-colonial Society</title>
+		<title>Politics and Religion - Pre-colonial Society</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 	<body class="no-sidebar is-preload">
 		<div id="page-wrapper">
-
 			<!-- Header -->
-				<section id="header" class="wrapper">
+			<section id="header" class="wrapper">
+				<!-- Logo -->
+				<div id="logo">
+					<h1><a href="index.html">Maritime Foundations: Transportation in Pre-Colonial Philippines</a></h1>
+					<p>
+						How mobility shaped politics, religion, economy, society, culture and technology before
+						colonization
+					</p>
+				</div>
 
-					<!-- Logo -->
-						<div id="logo">
-							<h1><a href="index.html">Maritime Foundations: Transportation in Pre-Colonial Philippines</a></h1>
-							<p>How mobility shaped politics, religion, economy, society, culture and technology before colonization</p>
-						</div>
-
-					<!-- Nav -->
-						<nav id="nav">
+				<!-- Nav -->
+				<nav id="nav">
+					<ul>
+						<li><a href="home.html">Home</a></li>
+						<li>
+							<a href="#">Aspects</a>
 							<ul>
-								<li><a href="home.html">Home</a></li>
-								<li>
-									<a href="#">Aspects</a>
-									<ul>
-										<li><a href="section-1.html">Politics and Religion</a></li>
-										<li class="current"><a href="section-2.html">Economic-Social Networks</a></li>
-										<li><a href="section-3.html">Culture and Technology</a></li>
-									</ul>
-								</li>
-								<li><a href="primary-sources.html">Sources</a></li>
+								<li><a href="section-1.html">Politics and Religion</a></li>
+								<li class="current"><a href="section-2.html">Economic-Social Networks</a></li>
+								<li><a href="section-3.html">Culture and Technology</a></li>
 							</ul>
-						</nav>
-
-				</section>
+						</li>
+						<li><a href="primary-sources.html">Sources</a></li>
+						<li><a href="credits.html">Credits</a></li>
+					</ul>
+				</nav>
+			</section>
 
 			<!-- Main -->
-				<div id="main" class="wrapper style2">
-					<div class="title">Politics and Religion</div>
-					<div class="container">
-
-						<!-- Content -->
-							<div id="content">
-								<article class="box post">
-									<header class="style1">
-										<h2>Lorem ipsum dolor sit amet magna egestas<br class="mobile-hide" />
-										morbi bibendum sed malesuada</h2>
-										<p>Tempus feugiat veroeros sed nullam dolore</p>
-									</header>
-									<a href="#" class="image featured">
-										<img src="images/pic01.jpg" alt="" />
-									</a>
-									<p>Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget.
-									odio eleifend. Duis commodo fringilla commodo. Aliquam erat volutpat. Vestibulum
-									facilisis leo magna. Cras sit amet urna eros, id egestas urna. Quisque aliquam
-									tempus euismod. Vestibulum ante ipsum primis in faucibus.</p>
-								</article>
-							</div>
-
+			<div id="main" class="wrapper style2">
+				<div class="title">Ekonomiko at Lipunan</div>
+				<div class="container">
+					<!-- Content -->
+					<div id="content">
+						<article class="box post">
+							<header class="style1">
+								<h2>
+									Maritime Mobility and Economic-Social Networks<br class="mobile-hide" />
+								</h2>
+								<p></p>
+							</header>
+							<a href="#" class="image featured">
+								<img src="images/pic01.jpg" alt="" />
+							</a>
+							<p class="infotext">
+								In the pre-colonial Philippines, transportation shaped both political authority and
+								spiritual life. Leadership depended heavily on mobility and control of the waterways, as
+								communities were connected by seas and rivers, as opposed to being separated Miguel de
+								Loarca observed settlements were organized in <b>barangays</b>, communities that
+								originally referred to boat-based groups. This was a reflection of how governance itself
+								was rooted in maritime movement, and is inherently decentralized. Political authority
+								rested in the hands of the datu, who exercised power within small but independent
+								communities connected by water routes.
+							</p>
+							<p class="quote">
+								“This people always had chiefs, called by them datos, who governed them and were
+								captains in their wars, and whom they obeyed and reverenced.” <br />- Plasencia
+							</p>
+							<p class="infotext">
+								Antonio de Morga further noted that natives “make use of those craft for trading among
+								the islands,” which shows that commerce is driven by mobility, and that alliances and
+								influences are expanded by it. A <b>datu</b> who controlled trade routes and maritime
+								expeditions strengthened his status, due to the close ties of leadership to resource
+								access and networks of exchange with leaders from other communities.
+							</p>
+							<p class="quote">
+								“Those chiefs possessed a great amount of gold, and slaves in proportion to their
+								nobility.”<br />- Bobadilla
+							</p>
+							<p class="quote">
+								“The chiefs in some villages had also fisheries, with established limits, and sections
+								of the rivers for markets. At these no one could fish, or trade… without paying for the
+								privilege…”<br />- Plasencia
+							</p>
+							<p class="infotext">
+								In addition to authority and power, religious life is just as embedded in this maritime
+								setting. Juan de Plasencia’s <b>Customs of the Tagalogs</b> documented that many natives
+								believed in spirits inhabiting natural elements such as stones, trees, and the waters.
+								Thus, rituals were performed to seek protection and favor from gods and spirits living
+								in these natural elements. Travel, fishing, and warfare were not simply considered
+								physical acts. Pre-colonial Filipinos considered these spiritual undertakings requiring
+								guidance from figures such as the <b>babaylan</b>, who were considered to have more
+								authority than the datus themselves. This was due to the babaylan being shamans who had
+								a connection to the spiritual and ancestral realms. Even cultural memory was preserved
+								through movement, as accounts describe natives keeping “their ancient lore through
+								songs… commonly while playing their oars.”
+							</p>
+							<p class="quote">
+								“They also worshipped the stones, rocks, reefs, and promontories of land which jut into
+								the sea; and made offerings to those of rice, fish, and other like things, or fire their
+								arrows at them in passing.”<br />- Bobadilla
+							</p>
+							<p class="quote">
+								“Although they had no temples, they had men and women who acted as priests, who were
+								called catalonan by some and babailan by others.”<br />- Plasencia
+							</p>
+							<p class="infotext">
+								While chroniclers described political structures and spiritual practices as separate
+								entities, the cited accounts reveal a deeper connection: authority, belief, and
+								transportation operated within the same aquatically-centered world. Control of waterways
+								shaped governance, while spiritual practices reinforced stability and unity among
+								maritime communities. In this manner, transportation was more than a means of travel: it
+								was a foundation of both power and faith in pre-colonial Philippine society.
+							</p>
+						</article>
 					</div>
+				</div>
 			</div>
 		</div>
 
 		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.dropotron.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
-
+		<script src="assets/js/jquery.min.js"></script>
+		<script src="assets/js/jquery.dropotron.min.js"></script>
+		<script src="assets/js/browser.min.js"></script>
+		<script src="assets/js/breakpoints.min.js"></script>
+		<script src="assets/js/util.js"></script>
+		<script src="assets/js/main.js"></script>
 	</body>
 </html>
