Changed how the profiles look, added Chu-Fan-Chi

--- a/primary-sources.html
+++ b/primary-sources.html
@@ -1,10 +1,5 @@
 <!DOCTYPE HTML>
-<!--
-	Escape Velocity by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
-<html lang=en>
+<html lang="en">
 	<head>
 		<title>Politics and Religion - Pre-colonial Society</title>
 		<meta charset="utf-8" />
@@ -14,80 +9,109 @@
 	<body class="no-sidebar is-preload">
 		<div id="page-wrapper">
 
-			<!-- Header -->
-				<section id="header" class="wrapper">
-
-					<!-- Logo -->
-						<div id="logo">
-							<h1><a href="index.html">Maritime Foundations: Transportation in Pre-Colonial Philippines</a></h1>
-							<p>How mobility shaped politics, religion, economy, society, culture and technology before colonization</p>
-						</div>
-
-					<!-- Nav -->
-						<nav id="nav">
+			<section id="header" class="wrapper">
+				<div id="logo">
+					<h1><a href="index.html">Maritime Foundations: Transportation in Pre-Colonial Philippines</a></h1>
+					<p>How mobility shaped politics, religion, economy, society, culture and technology before colonization</p>
+				</div>
+				<nav id="nav">
+					<ul>
+						<li><a href="home.html">Home</a></li>
+						<li>
+							<a href="#">Aspects</a>
 							<ul>
-								<li><a href="home.html">Home</a></li>
-								<li>
-									<a href="#">Aspects</a>
-									<ul>
-										<li class="current"><a href="section-1.html">Politics and Religion</a></li>
-										<li><a href="section-2.html">Economic-Social Networks</a></li>
-										<li><a href="section-3.html">Culture and Technology</a></li>
-									</ul>
-								</li>
-								<li><a href="primary-sources.html">Sources</a></li>
-								<li><a href="credits.html">Credits</a></li>
+								<li class="current"><a href="section-1.html">Politics and Religion</a></li>
+								<li><a href="section-2.html">Economic-Social Networks</a></li>
+								<li><a href="section-3.html">Culture and Technology</a></li>
 							</ul>
-						</nav>
+						</li>
+						<li><a href="primary-sources.html">Sources</a></li>
+						<li><a href="credits.html">Credits</a></li>
+					</ul>
+				</nav>
+			</section>
 
-				</section>
-
-			<!-- Main -->
-				<div id="main" class="wrapper style2">
-					<div class="title">Primary Sources</div>
-					<div class="container">
-
-						<!-- Content -->
-							<div id="content">
-								<article class="box post">
-									<header class="style1">
-										<h2>i. Chu-Fan-Chi<br class="mobile-hide" /></h2>
-									</header>
-									<p>insert here</p>
-									<header class="style1">
-										<h2>ii. Plasencia<br class="mobile-hide" /></h2>
-									</header>
-									<p>insert here</p>
-									<header class="style1">
-										<h2>iii. Bobadilla<br class="mobile-hide" /></h2>
-									</header>
-									<p>insert here</p>
-									<header class="style1">
-										<h2>iv. Morga<br class="mobile-hide" /></h2>
-									</header>
-									<p>insert here</p>
-									<header class="style1">
-										<h2>v. Loarca<br class="mobile-hide" /></h2>
-									</header>
-									<p>insert here</p>
-									<header class="style1">
-										<h2>vi. Sta Ines / Colin<br class="mobile-hide" /></h2>
-									</header>
-									<p>insert here</p>
-								</article>
+			<div id="main" class="wrapper style2">
+				<div class="title">Primary Sources</div>
+				<div class="container">
+					<div id="content">
+						<article class="box post">
+							
+							<div class="profile-card">
+								<div class="profile-image">
+									<img src="images\Chu-Fan-Chi.jpg" alt="Chu-Fan-Chi Placeholder" />
+								</div>
+								<div class="profile-info">
+									<h3>I. Chu-Fan-Chi</h3>
+									<p> 
+										The Chu-Fan-Chi (variously translated as A Description of Barbarian Nations, Records of Foreign People) is a 13th-century Chinese geographical treatise written by Zhao Rukuo. 
+										The work is a collection of descriptions of countries and various products from outside China, and it is considered an important source of information on the people, customs and in particular the traded commodities of many countries in South East Asia and around the Indian Ocean during the Song Dynasty.
+									</p>
+								</div>
 							</div>
 
+							<div class="profile-card">
+								<div class="profile-image">
+									<img src="https://via.placeholder.com/150" alt="Plasencia Placeholder" />
+								</div>
+								<div class="profile-info">
+									<h3>II. Plasencia</h3>
+									<p>Friar Juan de Plasencia authored "Customs of the Tagalogs" in 1589, a foundational text detailing the social hierarchy and legal system of the Tagalog people. His work served as an essential administrative guide for the Spanish colonial government. It offers crucial insights into pre-hispanic social classes, property rights, and religious practices.</p>
+								</div>
+							</div>
+
+							<div class="profile-card">
+								<div class="profile-image">
+									<img src="https://via.placeholder.com/150" alt="Bobadilla Placeholder" />
+								</div>
+								<div class="profile-info">
+									<h3>III. Bobadilla</h3>
+									<p>Diego de Bobadilla was a Jesuit priest whose 17th-century accounts provided detailed observations of early colonial Philippine society. His writings offer valuable ethnographic data concerning the daily lives, beliefs, and social structures of indigenous populations. These records help scholars understand the cultural shifts during the initial decades of Spanish colonization.</p>
+								</div>
+							</div>
+
+							<div class="profile-card">
+								<div class="profile-image">
+									<img src="https://via.placeholder.com/150" alt="Morga Placeholder" />
+								</div>
+								<div class="profile-info">
+									<h3>iv. Morga</h3>
+									<p>Antonio de Morga was a Spanish colonial official who published "Sucesos de las Islas Filipinas" in 1609. This work is widely regarded as one of the most reliable and objective chronicles of pre-colonial and early colonial Philippine culture, governance, and maritime activities. It remains a definitive primary source for understanding the archipelago's history before widespread Spanish cultural assimilation.</p>
+								</div>
+							</div>
+
+							<div class="profile-card">
+								<div class="profile-image">
+									<img src="https://via.placeholder.com/150" alt="Loarca Placeholder" />
+								</div>
+								<div class="profile-info">
+									<h3>v. Loarca</h3>
+									<p>Miguel de Loarca was an encomendero who wrote "Relacion de las Yslas Filipinas" in 1582 as a comprehensive report for the Spanish Crown. The document describes the geography, demographics, and cultural practices, particularly focusing on the Visayan region. His firsthand observations are instrumental for studying early indigenous warfare, trade, and social organization.</p>
+								</div>
+							</div>
+
+							<div class="profile-card">
+								<div class="profile-image">
+									<img src="https://via.placeholder.com/150" alt="Sta Ines / Colin Placeholder" />
+								</div>
+								<div class="profile-info">
+									<h3>vi. Sta Ines / Colin</h3>
+									<p>Francisco de Santa Inés and Francisco Colín were prominent Spanish missionaries who compiled extensive historical and ethnographic data about the Philippines. Their respective chronicles document indigenous lineages, ancestral customs, and the gradual religious transitions during the Spanish conquest. These writings provide a deep look into the pre-colonial spiritual landscape and the socio-political dynamics of early Filipino societies.</p>
+								</div>
+							</div>
+
+						</article>
 					</div>
+				</div>
 			</div>
 		</div>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.dropotron.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+		<script src="assets/js/jquery.min.js"></script>
+		<script src="assets/js/jquery.dropotron.min.js"></script>
+		<script src="assets/js/browser.min.js"></script>
+		<script src="assets/js/breakpoints.min.js"></script>
+		<script src="assets/js/util.js"></script>
+		<script src="assets/js/main.js"></script>
 
 	</body>
 </html>
