--- a/primary-sources.html
+++ b/primary-sources.html
@@ -52,7 +52,7 @@
 
 							<div class="profile-card">
 								<div class="profile-image">
-									<img src="https://via.placeholder.com/150" alt="Plasencia Placeholder" />
+									<img src="images\Plasencia.jpg" alt="Plasencia Placeholder" />
 								</div>
 								<div class="profile-info">
 									<h3>II. Plasencia</h3>
@@ -62,7 +62,7 @@
 
 							<div class="profile-card">
 								<div class="profile-image">
-									<img src="https://via.placeholder.com/150" alt="Bobadilla Placeholder" />
+									<img src="images\not Bobadilla.jpg" alt="Bobadilla Placeholder" />
 								</div>
 								<div class="profile-info">
 									<h3>III. Bobadilla</h3>
@@ -72,30 +72,30 @@
 
 							<div class="profile-card">
 								<div class="profile-image">
-									<img src="https://via.placeholder.com/150" alt="Morga Placeholder" />
+									<img src="images\morga.JPG" alt="Morga Placeholder" />
 								</div>
 								<div class="profile-info">
-									<h3>iv. Morga</h3>
+									<h3>IV. Morga</h3>
 									<p>Antonio de Morga was a Spanish colonial official who published "Sucesos de las Islas Filipinas" in 1609. This work is widely regarded as one of the most reliable and objective chronicles of pre-colonial and early colonial Philippine culture, governance, and maritime activities. It remains a definitive primary source for understanding the archipelago's history before widespread Spanish cultural assimilation.</p>
 								</div>
 							</div>
 
 							<div class="profile-card">
 								<div class="profile-image">
-									<img src="https://via.placeholder.com/150" alt="Loarca Placeholder" />
+									<img src="images\Loarca.png" alt="Loarca Placeholder" />
 								</div>
 								<div class="profile-info">
-									<h3>v. Loarca</h3>
+									<h3>V. Loarca</h3>
 									<p>Miguel de Loarca was an encomendero who wrote "Relacion de las Yslas Filipinas" in 1582 as a comprehensive report for the Spanish Crown. The document describes the geography, demographics, and cultural practices, particularly focusing on the Visayan region. His firsthand observations are instrumental for studying early indigenous warfare, trade, and social organization.</p>
 								</div>
 							</div>
 
 							<div class="profile-card">
 								<div class="profile-image">
-									<img src="https://via.placeholder.com/150" alt="Sta Ines / Colin Placeholder" />
+									<img src="images\no Collins.jpg" alt="Sta Ines / Colin Placeholder" />
 								</div>
 								<div class="profile-info">
-									<h3>vi. Sta Ines / Colin</h3>
+									<h3>VI. Sta Ines / Colin</h3>
 									<p>Francisco de Santa Inés and Francisco Colín were prominent Spanish missionaries who compiled extensive historical and ethnographic data about the Philippines. Their respective chronicles document indigenous lineages, ancestral customs, and the gradual religious transitions during the Spanish conquest. These writings provide a deep look into the pre-colonial spiritual landscape and the socio-political dynamics of early Filipino societies.</p>
 								</div>
 							</div>
