--- a/section-1.html
+++ b/section-1.html
@@ -47,79 +47,78 @@
 				<div class="title">Politika & Relihiyon</div>
 				<div class="container">
 					<!-- Content -->
-					<div id="content">
-						<article class="box post">
-							<header class="style1">
-								<h2>
-									Transportation, Political Authority, and Religious Life<br class="mobile-hide" />
-								</h2>
-								<p></p>
-							</header>
-							<a href="#" class="image featured">
-								<img src="images/pic01.jpg" alt="" />
-							</a>
-							<p class="infotext">
-								In the pre-colonial Philippines, transportation shaped both political authority and
-								spiritual life. Leadership depended heavily on mobility and control of the waterways, as
-								communities were connected by seas and rivers, as opposed to being separated Miguel de
-								Loarca observed settlements were organized in <b>barangays</b>, communities that
-								originally referred to boat-based groups. This was a reflection of how governance itself
-								was rooted in maritime movement, and is inherently decentralized. Political authority
-								rested in the hands of the datu, who exercised power within small but independent
-								communities connected by water routes.
-							</p>
-							<p class="quote">
-								“This people always had chiefs, called by them datos, who governed them and were
-								captains in their wars, and whom they obeyed and reverenced.” <br />- Plasencia
-							</p>
-							<p class="infotext">
-								Antonio de Morga further noted that natives “make use of those craft for trading among
-								the islands,” which shows that commerce is driven by mobility, and that alliances and
-								influences are expanded by it. A <b>datu</b> who controlled trade routes and maritime
-								expeditions strengthened his status, due to the close ties of leadership to resource
-								access and networks of exchange with leaders from other communities.
-							</p>
-							<p class="quote">
-								“Those chiefs possessed a great amount of gold, and slaves in proportion to their
-								nobility.”<br />- Bobadilla
-							</p>
-							<p class="quote">
-								“The chiefs in some villages had also fisheries, with established limits, and sections
-								of the rivers for markets. At these no one could fish, or trade… without paying for the
-								privilege…”<br />- Plasencia
-							</p>
-							<p class="infotext">
-								In addition to authority and power, religious life is just as embedded in this maritime
-								setting. Juan de Plasencia’s <b>Customs of the Tagalogs</b> documented that many natives
-								believed in spirits inhabiting natural elements such as stones, trees, and the waters.
-								Thus, rituals were performed to seek protection and favor from gods and spirits living
-								in these natural elements. Travel, fishing, and warfare were not simply considered
-								physical acts. Pre-colonial Filipinos considered these spiritual undertakings requiring
-								guidance from figures such as the <b>babaylan</b>, who were considered to have more
-								authority than the datus themselves. This was due to the babaylan being shamans who had
-								a connection to the spiritual and ancestral realms. Even cultural memory was preserved
-								through movement, as accounts describe natives keeping “their ancient lore through
-								songs… commonly while playing their oars.”
-							</p>
-							<p class="quote">
-								“They also worshipped the stones, rocks, reefs, and promontories of land which jut into
-								the sea; and made offerings to those of rice, fish, and other like things, or fire their
-								arrows at them in passing.”<br />- Bobadilla
-							</p>
-							<p class="quote">
-								“Although they had no temples, they had men and women who acted as priests, who were
-								called catalonan by some and babailan by others.”<br />- Plasencia
-							</p>
-							<p class="infotext">
-								While chroniclers described political structures and spiritual practices as separate
-								entities, the cited accounts reveal a deeper connection: authority, belief, and
-								transportation operated within the same aquatically-centered world. Control of waterways
-								shaped governance, while spiritual practices reinforced stability and unity among
-								maritime communities. In this manner, transportation was more than a means of travel: it
-								was a foundation of both power and faith in pre-colonial Philippine society.
-							</p>
-						</article>
-					</div>
+							<div id="content">
+								<article class="box post">
+									<header class="style1">
+										<h2>Transportation, Political Authority,<br class="mobile-hide" />
+										and Religious Life</h2>
+										<p>Tempus feugiat veroeros sed nullam dolore</p>
+									</header>
+									<a href="#" class="image featured">
+										<img src="images/polnreligion.png" alt="" />  <!--Change image-->
+									</a>
+									<p>In the pre-colonial Philippines, transportation shaped both political authority and spiritual life. 
+										Leadership depended heavily on mobility and control of the waterways, as communities were connected 
+										by seas and rivers, as opposed to being separated
+										Miguel de Loarca observed settlement	s were organized in barangays, communities that originally referred 
+										to boat-based groups. This was a reflection of how governance itself was rooted in maritime movement, and 
+										is inherently decentralized. Political authority rested in the hands of the datu, who exercised power within 
+										small but independent communities connected by water routes.</p>
+									
+										<blockquote>
+											“This people always had chiefs, called by them datos, who governed them and were captains in their wars, 
+											and whom they obeyed and reverenced.”  <cite>(Plasencia)</cite>
+										</blockquote>
+
+									<p>
+										Antonio de Morga further noted that natives “make use of those craft for trading among the islands,” 
+										which shows that commerce is driven by mobility, and that alliances and influences are expanded by it.
+										 A datu who controlled trade routes and maritime expeditions strengthened his status, due to the close 
+										 ties of leadership to resource access and networks of exchange with leaders from other communities.
+									</p>
+
+										<blockquote>
+											“Those chiefs possessed a great amount of gold, and slaves in proportion to their nobility.”
+											<cite>(Bobadilla)</cite>
+										</blockquote>
+
+										<blockquote>
+											“The chiefs in some villages had also fisheries, with established limits, and sections of the rivers for markets. 
+											At these no one could fish, or trade… without paying for the privilege…”
+											<cite>(Plasencia)</cite>
+										</blockquote>
+
+										<p>
+											In addition to authority and power, religious life is just as embedded in this maritime setting. Juan de Plasencia’s 
+											Customs of the Tagalogs documented that many natives believed in spirits inhabiting natural elements such as stones, 
+											trees, and the waters. Thus, rituals were performed to seek protection and favor from gods and spirits living in these 
+											natural elements. Travel, fishing, and warfare were not simply considered physical acts. Pre-colonial Filipinos considered 
+											these spiritual undertakings requiring guidance from figures such as the babaylan, who were considered to have more authority 
+											than the datus themselves. This was due to the babaylan being shamans who had a connection to the spiritual and ancestral realms. 
+											Even cultural memory was preserved through movement, as accounts describe natives keeping “their ancient lore through songs… commonly 
+											while playing their oars.”
+										</p>
+
+										<blockquote>
+											“They also worshipped the stones, rocks, reefs, and promontories of land which jut into the sea; and made offerings to those of rice, fish, and other like things, or fire their arrows at them in passing.”
+											<cite>(Bobadilla)</cite>
+										</blockquote>
+
+										<blockquote>
+											“Although they had no temples, they had men and women who acted as priests, who were called catalonan by some and babailan by others.”
+											<cite>(Plasencia)</cite>
+										</blockquote>
+
+										<p>
+											While chroniclers described political structures and spiritual practices as separate entities, the cited accounts reveal a deeper connection: 
+											authority, belief, and transportation operated within the same aquatically-centered world. Control of waterways shaped governance, while spiritual 
+											practices reinforced stability and unity among maritime communities. In this manner, transportation was more than a means of travel: it was a foundation 
+											of both power and faith in pre-colonial Philippine society.
+										</p>
+
+
+								</article>
+							</div>
 				</div>
 			</div>
 		</div>
@@ -133,3 +132,4 @@
 		<script src="assets/js/main.js"></script>
 	</body>
 </html>
+
