--- a/section-2.html
+++ b/section-2.html
@@ -47,79 +47,66 @@
 				<div class="title">Ekonomiko at Lipunan</div>
 				<div class="container">
 					<!-- Content -->
-					<div id="content">
-						<article class="box post">
-							<header class="style1">
-								<h2>
-									Maritime Mobility and Economic-Social Networks<br class="mobile-hide" />
-								</h2>
-								<p></p>
-							</header>
-							<a href="#" class="image featured">
-								<img src="images/pic01.jpg" alt="" />
-							</a>
-							<p class="infotext">
-								In the pre-colonial Philippines, transportation shaped both political authority and
-								spiritual life. Leadership depended heavily on mobility and control of the waterways, as
-								communities were connected by seas and rivers, as opposed to being separated Miguel de
-								Loarca observed settlements were organized in <b>barangays</b>, communities that
-								originally referred to boat-based groups. This was a reflection of how governance itself
-								was rooted in maritime movement, and is inherently decentralized. Political authority
-								rested in the hands of the datu, who exercised power within small but independent
-								communities connected by water routes.
-							</p>
-							<p class="quote">
-								“This people always had chiefs, called by them datos, who governed them and were
-								captains in their wars, and whom they obeyed and reverenced.” <br />- Plasencia
-							</p>
-							<p class="infotext">
-								Antonio de Morga further noted that natives “make use of those craft for trading among
-								the islands,” which shows that commerce is driven by mobility, and that alliances and
-								influences are expanded by it. A <b>datu</b> who controlled trade routes and maritime
-								expeditions strengthened his status, due to the close ties of leadership to resource
-								access and networks of exchange with leaders from other communities.
-							</p>
-							<p class="quote">
-								“Those chiefs possessed a great amount of gold, and slaves in proportion to their
-								nobility.”<br />- Bobadilla
-							</p>
-							<p class="quote">
-								“The chiefs in some villages had also fisheries, with established limits, and sections
-								of the rivers for markets. At these no one could fish, or trade… without paying for the
-								privilege…”<br />- Plasencia
-							</p>
-							<p class="infotext">
-								In addition to authority and power, religious life is just as embedded in this maritime
-								setting. Juan de Plasencia’s <b>Customs of the Tagalogs</b> documented that many natives
-								believed in spirits inhabiting natural elements such as stones, trees, and the waters.
-								Thus, rituals were performed to seek protection and favor from gods and spirits living
-								in these natural elements. Travel, fishing, and warfare were not simply considered
-								physical acts. Pre-colonial Filipinos considered these spiritual undertakings requiring
-								guidance from figures such as the <b>babaylan</b>, who were considered to have more
-								authority than the datus themselves. This was due to the babaylan being shamans who had
-								a connection to the spiritual and ancestral realms. Even cultural memory was preserved
-								through movement, as accounts describe natives keeping “their ancient lore through
-								songs… commonly while playing their oars.”
-							</p>
-							<p class="quote">
-								“They also worshipped the stones, rocks, reefs, and promontories of land which jut into
-								the sea; and made offerings to those of rice, fish, and other like things, or fire their
-								arrows at them in passing.”<br />- Bobadilla
-							</p>
-							<p class="quote">
-								“Although they had no temples, they had men and women who acted as priests, who were
-								called catalonan by some and babailan by others.”<br />- Plasencia
-							</p>
-							<p class="infotext">
-								While chroniclers described political structures and spiritual practices as separate
-								entities, the cited accounts reveal a deeper connection: authority, belief, and
-								transportation operated within the same aquatically-centered world. Control of waterways
-								shaped governance, while spiritual practices reinforced stability and unity among
-								maritime communities. In this manner, transportation was more than a means of travel: it
-								was a foundation of both power and faith in pre-colonial Philippine society.
-							</p>
-						</article>
-					</div>
+							<div id="content">
+								<article class="box post">
+									<header class="style1">
+										<h2>Maritime Mobility<br class="mobile-hide" />
+										and Economic-Social Networks</h2>
+										<p>Tempus feugiat veroeros sed nullam dolore</p>
+									</header>
+									<a href="#" class="image featured">
+										<img src="images/pic01.jpg" alt="" />
+									</a>
+									<p>In the pre-colonial Philippines, it has been established that 
+										maritime transportation dominated daily life due to the natural 
+										geography and topography of the Philippines. This means that maritime 
+										mobility is essential to get from one location or community to another. 
+										It also ensures a larger capacity for moving goods, from water and food 
+										to daily necessities. The ships were used to go across rivers, sailing the 
+										length and width of it, but also for coastal ventures such as trading with 
+										other villages or according to the Chinese sources with other states.</p>
+
+										<blockquote>
+											“Trade was conducted both within the islands and with foreign merchants.”
+											<cite>(Bobadilla)</cite>
+										</blockquote>
+
+									<p>
+										The economic side is also important as boats are the main method of transporting 
+										goods both inland by using rivers, and coastal settlements. The goods range from wax, 
+										cotton, coconuts, and alcoholic beverages and other products locals made. Trade was also 
+										seen as prestigious according to Chu-Fan-Chi as celebrations were held for traders upon their 
+										return which indicated that wealth was heavily tied to trade and the vast concentration of wealth 
+										was to coastal elites. This heavily suggests that mobility allowed these conditions to be commonplace. 
+										The trade of human captives is also noted in the Chinese sources as villages and settlements fought, 
+										raided and captured people to be sold.
+									</p>
+
+										<blockquote>
+											“The customary method of trading was by bartering one thing for another, such as food, cloth, 
+											cattle, fowls, lands, houses, fields, slaves, fishing grounds, and palm trees (both nipa and wild). 
+											Sometimes a price intervened, which was paid in gold, as agreed upon, or in metal bells brought from 
+											China. These bells they regard as precious jewels; they resemble large pans and are very sonorous. 
+											They play upon their feasts and carry them to the water in their boats instead of drums and other instruments. 
+											There are often delays and terms for certain payments, and bondsmen who intervene and bind themselves, but 
+											always with very usurious and excessive profits and interests.”
+											<cite> (Morga)</cite>
+										</blockquote>
+									
+									<p>
+										Beyond economic exchange, maritime transportation fundamentally shaped the social structure of pre-colonial Philippine 
+										communities. The constant movement between inland and coastal settlements created networks of interdependence, as Loarca 
+										noted that mountain inhabitants relied on coastal goods such as fish and salt, while coastal groups depended on inland 
+										products. This reciprocity fostered cooperation but also reinforced distinctions between communities based on their role 
+										within trade networks. Access to boats and maritime routes influenced social hierarchy, as individuals who controlled vessels 
+										or led trading expeditions accumulated wealth, prestige, and influence. Chinese accounts describing celebrations for returning 
+										traders further suggest that maritime success was publicly recognized and socially rewarded. In this way, transportation not 
+										only enabled economic survival but also shaped patterns of status, leadership, and social mobility within pre-colonial society.
+									</p>
+
+									
+								</article>
+							</div>
 				</div>
 			</div>
 		</div>
@@ -133,3 +120,4 @@
 		<script src="assets/js/main.js"></script>
 	</body>
 </html>
+
