Update content and navigation links across multiple sections

--- a/home.html
+++ b/home.html
@@ -153,10 +153,12 @@
 				<div class="title">Conclusions</div>
 				<div class="container">
 					<header class="style1">
-						<h2>Ipsum sapien elementum portitor?</h2>
+						<h2>The Archipelagic Identity</h2>
 						<p>
-							Sed turpis tortor, tincidunt sed ornare in metus porttitor mollis nunc in aliquet.<br />
-							Nam pharetra laoreet imperdiet volutpat etiam feugiat.
+								Pre-colonial Philippine transportation was the lifeblood of civilization. In an archipelagic environment, waterways dictated both political authority and spiritual life. A datu's power relied on mastering maritime networks, shipbuilding, and trade routes, while animistic rituals ensured safe passages and revered aquatic elements as domains of spirits.
+	Maritime mobility drove the pre-colonial economy and social structure. Inter-island trade exchanged essential goods, such as coastal salt and fish for mountainous rice and cotton, forging networks of mutual dependence and economic specialization. Access to these maritime routes defined social hierarchies, allowing expedition leaders to accumulate wealth, prestige, and influence.
+	Navigating this environment sparked remarkable technological innovation and cultural adaptation. Early Filipinos engineered specialized vessels using advanced lashed-lug techniques, wooden nails, and flexible bejucos. This maritime reality shaped their architecture, seen in houses elevated on stakes, and deeply influenced their cultural identity as they preserved genealogies through songs chanted to the rhythm of rowing.
+
 						</p>
 					</header>
 				</div>
