--- a/section-1.html
+++ b/section-1.html
@@ -116,7 +116,9 @@
 											of both power and faith in pre-colonial Philippine society.
 										</p>
 
-
+									<ul class="actions" style="margin-top: 3em; text-align: center;">
+										<li><a href="section-2.html" class="button large">Economic-Social Networks</a></li>
+									</ul>
 								</article>
 							</div>
 				</div>
