--- a/section-2.html
+++ b/section-2.html
@@ -104,7 +104,9 @@
 										only enabled economic survival but also shaped patterns of status, leadership, and social mobility within pre-colonial society.
 									</p>
 
-									
+									<ul class="actions" style="margin-top: 3em; text-align: center;">
+										<li><a href="section-3.html" class="button large">Culture and Technology</a></li>
+									</ul>
 								</article>
 							</div>
 				</div>
