--- a/section-3.html
+++ b/section-3.html
@@ -118,6 +118,9 @@
 								maritime communities. In this manner, transportation was more than a means of travel: it
 								was a foundation of both power and faith in pre-colonial Philippine society.
 							</p>
+							<ul class="actions" style="margin-top: 3em; text-align: center;">
+								<li><a href="section-1.html" class="button large">Politics and Religion</a></li>
+							</ul>
 						</article>
 					</div>
 				</div>
